# TetiBot

./: .gitignore  .gitmodules  Makefile  README.md
art/aseprite/exports/128/: teti_track_master_sheet_128.md
art/aseprite/faces/: teti_track_faces_128.aseprite
art/aseprite/hats/: hats_manifest.json  teti_track_hat_master.aseprite  teti_track_hats_128.aseprite
art/aseprite/master/: teti_track_master_front_128.aseprite  teti_track_master_side_128.aseprite
art/aseprite/motion/: teti_track_motion_128.aseprite
art/aseprite/scripts/: export_tags.lua  generate_track_motion_128.lua  preview_sheet.lua  sheet_manifest.lua  validate_hat_master.lua
docs/: chatmail-mvp.md  delta-chat-core-source.md
docs/art-pipeline/: README.md  aseprite_setup.md  aseprite_workflow.md  asset_naming.md  hat_system.md  master_128_pipeline.md  rebuild_on_new_mac.md
pet-runtime/lua/: animation.lua  config.lua  hat_registry.lua  hats_manifest.lua  input.lua  main.lua  menu.lua  pet.lua  sprites_manifest.lua
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  pet_process.rs
src-tauri/src/chatmail/: account.rs  attachments.rs  contacts.rs  invite_parser.rs  messages.rs  mod.rs  relay_config.rs  rpc_client.rs  rpc_process.rs  standard_interop.rs
src-tauri/src/teti_core/: mod.rs  pet_profile.rs  task_protocol.rs
tests/: pet_runtime_regression.lua  test_hat_assets.py
tools/asset-build/: build_master_128.py  build_master_128.sh  check_aseprite_env.sh
ui/: app.js  index.html  styles.css
(+3 files in other folders)
