[package]
name = "teti-desktop"
version = "0.1.0"
edition = "2021"
description = "Teti macOS desktop shell with Delta Chat interoperability"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "process", "rt-multi-thread", "sync", "time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1"
